// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match Snapshot w/ false 1`] = `
<DocumentFragment>
  <div
    class="Dog"
  >
    <h1>
      Rusty
    </h1>
    <button>
      Adopt me!
    </button>
  </div>
</DocumentFragment>
`;

exports[`should match Snapshot w/ true 1`] = `
<DocumentFragment>
  <div
    class="Dog"
  >
    <h1>
      Rusty
    </h1>
    <p>
      Rusty has been adopted!
    </p>
  </div>
</DocumentFragment>
`;
